# BetterLearningIDE

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/glad/: glad.h
scripts/Linux/: build.sh
scripts/Windows/: build.bat  run.bat
src/: glad.c  main.c
src/GLTools/: CMakeLists.txt  GLTools.c  GLTools.h  helper.c  helper.h
src/GLTools/Managers/: KeyManager.c  KeyManager.h
src/GLTools/Managers/Input/: KeyManager.c  KeyManager.h
